NetBSD Problem Report #38307

From martin@duskware.de  Wed Mar 26 10:33:44 2008
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 3F36263B8A7
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 26 Mar 2008 10:33:44 +0000 (UTC)
Message-Id: <20080326103342.8FBA033B64@mail.duskware.de>
Date: Wed, 26 Mar 2008 11:33:42 +0100 (CET)
From: martin@duskware.de
Reply-To: martin@duskware.de
To: gnats-bugs@gnats.NetBSD.org
Subject: powerpc has MD ddb commands w/o help
X-Send-Pr-Version: 3.95

>Number:         38307
>Category:       port-powerpc
>Synopsis:       powerpc has MD ddb commands w/o help
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    port-powerpc-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 26 10:35:01 +0000 2008
>Closed-Date:    Sat Jan 23 01:32:30 +0000 2010
>Last-Modified:  Sat Jan 23 01:35:01 +0000 2010
>Originator:     Martin Husemann
>Release:        NetBSD 4.99.58
>Organization:
The NetBSD Foundation
>Environment:
System: NetBSD sunny-weather.duskware.de 4.99.58 NetBSD 4.99.58 (SUNNY) #74: Tue Mar 25 13:49:05 CET 2008 martin@night-porter.duskware.de:/usr/src/sys/arch/sparc64/compile/SUNNY sparc64
Architecture: sparc64
Machine: sparc64
>Description:

powerpc has "mach" ddb commands that have no help for options DDB_VERBOSE_HELP.

>How-To-Repeat:
code inspection

>Fix:
Help is very easy to add once you know what the "mach" commands actually do.
Examples can be found in sparc64 or sh3 db_interface.c. While checking these
commands, please also verify the ddb(4) manual page is correct.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: mrg@NetBSD.org
State-Changed-When: Sat, 23 Jan 2010 01:32:30 +0000
State-Changed-Why:
i fixed it.


From: matthew green <mrg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/38307 CVS commit: src
Date: Sat, 23 Jan 2010 01:32:06 +0000

 Module Name:	src
 Committed By:	mrg
 Date:		Sat Jan 23 01:32:06 UTC 2010

 Modified Files:
 	src/share/man/man4: ddb.4
 	src/sys/arch/powerpc/powerpc: db_interface.c

 Log Message:
 document powerpc ddb commands.  PR#38307.


 To generate a diff of this commit:
 cvs rdiff -u -r1.129 -r1.130 src/share/man/man4/ddb.4
 cvs rdiff -u -r1.39 -r1.40 src/sys/arch/powerpc/powerpc/db_interface.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.