document powerpc ddb commands.  PR#38307.